# cartpole_casadi_cplusplus

./: CMakeLists.txt  README.md
include/: DirectCollocationSolver.hpp  DirectTranscriptSolver.hpp  Timer.hpp  common.hpp  solver.hpp
src/: DirectCollocationSolver.cpp  DirectTranscriptSolver.cpp  simple_test.cpp  solver.cpp  test.cpp
